[package]
name = "rsjit"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14.2"
memmap2 = "0.9.5"
# parol_runtime = "1.0.0"
# num_enum = "0.7.3"
lalrpop-util = "0.22.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
fnv = "1.0.7"
bitflags = "2.6.0"
canrun = "0.5.0"

[build-dependencies]
# bindgen = "0.70.1"
# parol = "1.0.0"
lalrpop = "0.22.0"
cc = "1.1.27"
