[package]
name = "rsjit"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14.2"
memmap2 = "0.9.5"
lalrpop-util = "0.22.0"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
fnv = "1.0.7"
bitflags = "2.6.0"
# canrun = "0.5.0"
logica = { path = "logica" }
clap = { version = "4.5.20", features = ["derive"] }

[build-dependencies]
lalrpop = "0.22.0"
cc = "1.1.27"
